sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort3.scala.code
def cocktailSort3() {
	var debut = 0;
	var swaped = true;
	var fin = getNombreValeurs - 2;
	var i = 0;
	do{
		swaped = false;
		for(i <- debut to fin){
			if(plusPetit(i+1, i)){
				swaped = true;
				echange(i+1, i);
			}
		}
		if(swaped){
			fin -= 1;
			i = fin;
			while(i >= debut){
				if(plusPetit(i+1, i)){
					swaped = true;
					echange(i+1, i);
				}
				i -= 1;
			}
			debut += 1;
		}
		if(!swaped){
			break;
		}
	}while(swaped);
}
